feat: Scaffold initial frontend and backend applications, including dependencies and configuration.

--- a/apps/BackEnd/package.json
+++ b/apps/BackEnd/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "build": "nitro build",
+    "build:vercel": "NITRO_PRESET=vercel nitro build",
     "dev": "nitro dev",
     "preview": "node .output/server/index.mjs"
   },
