--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "keywords": [],
   "author": "Nekitori17",
   "license": "MIT",
-  "packageManager": "pnpm@10.29.3"
+  "packageManager": "pnpm@9.12.0",
+  "engines": {
+    "node": "20.x"
+  }
 }
