--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "pnpm -r --parallel dev",
-    "build": "pnpm -r build",
+    "build": "pnpm --filter frontend build && pnpm --filter backend build",
+    "build:vercel": "pnpm --filter frontend build && pnpm --filter backend build:vercel",
+    "vercel-build": "pnpm run build:vercel && rm -rf .vercel/output public && mkdir -p .vercel public && mv apps/BackEnd/.vercel/output .vercel/output && cp -r .vercel/output/* public/",
     "deploy": "vercel --prod",
-    "vercel-build": "pnpm --filter frontend build && pnpm --filter backend build:vercel && mv apps/BackEnd/.vercel/output .vercel/",
+    "clean": "pnpm -r exec rm -rf dist .output .vercel",
     "db:generate": "pnpm --filter backend exec drizzle-kit generate",
     "db:push": "pnpm --filter backend exec drizzle-kit push",
     "db:studio": "pnpm --filter backend exec drizzle-kit studio"
