--- a/apps/BackEnd/package.json
+++ b/apps/BackEnd/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "nitro build",
-    "build:vercel": "NITRO_PRESET=vercel nitro build",
+    "build:vercel": "nitro build --preset vercel",
     "dev": "nitro dev",
     "preview": "node .output/server/index.mjs"
   },
