--- a/apps/FrontEnd/package.json
+++ b/apps/FrontEnd/package.json
@@ -21,6 +21,7 @@
     "@vicons/fa": "^0.13.0",
     "@vitejs/plugin-vue": "^6.0.4",
     "@vue/tsconfig": "^0.8.1",
+    "dotenv": "^17.3.1",
     "naive-ui": "^2.43.2",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.9.3",
